# cmake

./: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cpp
dlibs/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
